Se cambia button por input type=submit

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
 <h1>Mi cuenta es: <%=@contador %></h1>
 <form method="post" action="/">
 	<input type="hidden" name="hdnContador" value="<%=@contador %>">
-	<button type="submit">Sumar!</button>
+	<input type="submit" name="Sumar!">
 </form>
